--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,6 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
+    projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
   displayName: 'dotnet build $(buildConfiguration)'
